--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
-		<meta name=”description” content="全種類のソルフェジオ周波数を聞いて癒されよう！波形の変更により音色の調整可能。タイマー機能あり。ソルフェジオ周波数の効果一覧や波形と音色の関係も分かる。">
+		<meta name="description" content="全種類のソルフェジオ周波数を聞いて癒されよう！波形の変更により音色の調整可能。タイマー機能あり。ソルフェジオ周波数の効果一覧や波形と音色の関係も分かる。">
 		<title>ソルフェジオ周波数♪</title>
 		<link rel="manifest" href="manifest.json">
 		<link rel="stylesheet" href="./css/main.css">
